--- a/v2/patrodent/templates/antes-y-despues.html
+++ b/v2/patrodent/templates/antes-y-despues.html
@@ -50,7 +50,7 @@
             <h4>Estética y blanqueamiento dental</h4>
             <div class="imgswrapper">
             <div class="wrapper indent-bot2 afterAndBefore">
-                <figure class="img-style img-indent"><img src="{% static 'images/estetica_despues_4.jpg' %}" alt="Caso real odontología conservadora" title="Caso real odontología conservadora" class="after" />
+                <figure class="img-style img-indent"><img src="{% static 'images/estetica-despues-4.jpg' %}" alt="Caso real odontología conservadora" title="Caso real odontología conservadora" class="after" />
                     <span class="afterBeforeText">Después</span>
                 </figure>
             </div>
@@ -74,33 +74,33 @@
 
 {% block footergallery %}
     <figure>
-        <a href="{% static 'images/ortodoncia_caso_antes3.jpg' %}" rel="shadowbox[antes_y_despues]" title="Ortodoncia caso real (antes)">
+        <a href="{% static 'images/ortodoncia_caso_antes3.jpg' %}" rel="shadowbox[antes-y-despues]" title="Ortodoncia caso real (antes)">
             <img src="{% static 'images/ortodoncia_caso_antes3.min.jpg' %}" alt="Ortodoncia caso real (antes)" title="Ortodoncia caso real (antes)" />
         </a>
     </figure>
     <figure>
-        <a href="{% static 'images/ortodoncia_caso_antes1.jpg' %}" rel="shadowbox[antes_y_despues]" title="Ortodoncia caso real (antes)">
+        <a href="{% static 'images/ortodoncia_caso_antes1.jpg' %}" rel="shadowbox[antes-y-despues]" title="Ortodoncia caso real (antes)">
             <img src="{% static 'images/ortodoncia_caso_antes1.min.jpg' %}" alt="Ortodoncia caso real (antes)" title="Ortodoncia caso real (antes)" />
         </a>
     </figure>
     <figure>
-        <a href="{% static 'images/ortodoncia_caso_antes2.jpg' %}" rel="shadowbox[antes_y_despues]" title="Ortodoncia caso real (antes)">
+        <a href="{% static 'images/ortodoncia_caso_antes2.jpg' %}" rel="shadowbox[antes-y-despues]" title="Ortodoncia caso real (antes)">
             <img src="{% static 'images/ortodoncia_caso_antes2.min.jpg' %}" alt="Ortodoncia caso real (antes)" title="Ortodoncia caso real (antes)" />
         </a>
     </figure>
     <div class="clear"></div>
     <figure>
-        <a href="{% static 'images/ortodoncia_caso_despues2.jpg' %}" rel="shadowbox[antes_y_despues]" title="Ortodoncia caso real (después)">
+        <a href="{% static 'images/ortodoncia_caso_despues2.jpg' %}" rel="shadowbox[antes-y-despues]" title="Ortodoncia caso real (después)">
             <img src="{% static 'images/ortodoncia_caso_despues2.min.jpg' %}" alt="Ortodoncia caso real (después)" title="Ortodoncia caso real (después)" />
         </a>
     </figure>
     <figure>
-        <a href="{% static 'images/ortodoncia_caso_despues1.jpg' %}" rel="shadowbox[antes_y_despues]" title="Ortodoncia caso real (después)">
+        <a href="{% static 'images/ortodoncia_caso_despues1.jpg' %}" rel="shadowbox[antes-y-despues]" title="Ortodoncia caso real (después)">
             <img src="{% static 'images/ortodoncia_caso_despues1.min.jpg' %}" alt="Ortodoncia caso real (después)" title="Ortodoncia caso real (después)" />
         </a>
     </figure>
     <figure>
-        <a href="{% static 'images/ortodoncia_caso_despues3.jpg' %}" rel="shadowbox[antes_y_despues]" title="Ortodoncia caso real (después)">
+        <a href="{% static 'images/ortodoncia_caso_despues3.jpg' %}" rel="shadowbox[antes-y-despues]" title="Ortodoncia caso real (después)">
             <img src="{% static 'images/ortodoncia_caso_despues3.min.jpg' %}" alt="Ortodoncia caso real (después)" title="Ortodoncia caso real (después)" />
         </a>
     </figure>
