--- a/v2/patrodent/templates/templates/base.html
+++ b/v2/patrodent/templates/templates/base.html
@@ -140,7 +140,7 @@
                     {% include "templates/inc.tratamientos.html" %}
                 </ul>
             </li>
-            <li class="beforeAfter"><a href="{% url 'template_view' "antes_y_despues" %}" class="{% block class-antes-despues-link2 %}{% endblock %}">Antes y despues</a></li>
+            <li class="beforeAfter"><a href="{% url 'template_view' "antes-y-despues" %}" class="{% block class-antes-despues-link2 %}{% endblock %}">Antes y despues</a></li>
             <li class="contact">
                 <a href="{% url 'template_view' "contacto" %}" class="{% block class-contacto-link2 %}{% endblock %}">Contacto</a>
                 <ul>
