--- a/v2/patrodent/templates/index.html
+++ b/v2/patrodent/templates/index.html
@@ -39,7 +39,7 @@
                 <div class="slider-wrapper">
                     <div class="slider">
                         <ul class="items">
-                            <li><img src="{% static 'images/logo_galeria.png' %}" alt=""></li>
+                            <li><img src="{% static 'images/logo-galeria.png' %}" alt=""></li>
                             <li><img src="{% static 'images/patrocinio_y_angela.jpg' %}" alt=""></li>
                             <li><img src="{% static 'images/sala_de_esperas.jpg' %}" alt=""></li>
                             <li><img src="{% static 'images/recepcion3.jpg' %}" alt=""></li>
@@ -75,15 +75,15 @@
         <div class="grid_7 suffix_1 omega">
             <h4 class="p3">Renovandonos por ti...</h4>
             <blockquote><p>Nuestra vocación es ofrecer un excelente servicio y atención a nuestros pacientes para que queden totalmente satisfechos. Por ello, nos renovamos día a día intentando superarnos en nuestros logros; renovando la imágen de <a href="{% url 'template_view' "instalaciones" %}"> nuestra clínica</a> que le invitamos a conocer.</p>
-            <p>Nuestro <a href="{% url 'template_view' "quienes_somos" %}">equipo humano</a> muy cualificado está a su disposición para ayudarle a resolver todas sus consultas en cualquier momento.”</p></blockquote>
+            <p>Nuestro <a href="{% url 'template_view' "quienes-somos" %}">equipo humano</a> muy cualificado está a su disposición para ayudarle a resolver todas sus consultas en cualquier momento.”</p></blockquote>
         </div>
     </div>
 {% endblock %}
 
 {% block footergallery %}
     <figure>
-        <a href="{% static 'images/equipo_trabajando2.jpg' %}" rel="shadowbox[index]" title="Equipo trabajando">
-            <img src="{% static 'images/equipo_trabajando2.min.jpg' %}" alt="Equipo trabajando" title="Equipo trabajando" />
+        <a href="{% static 'images/equipo-trabajando2.jpg' %}" rel="shadowbox[index]" title="Equipo trabajando">
+            <img src="{% static 'images/equipo-trabajando2.min.jpg' %}" alt="Equipo trabajando" title="Equipo trabajando" />
         </a>
     </figure>
     <figure>
