--- a/v2/patrodent/templates/templates/tratamiento.html
+++ b/v2/patrodent/templates/templates/tratamiento.html
@@ -56,7 +56,7 @@
                 {% block before-after %}
                     <div class="wrapper indent-bot2">
                         <figure class="img-style img-indent">
-                            <img src="{% static 'images/limpieza_despues.jpg' %}" class="after" />
+                            <img src="{% static 'images/limpieza-despues.jpg' %}" class="after" />
                             <span class="afterBeforeText">Después</span>
                         </figure>
                         <figure class="img-style"><img src="{% static 'images/periodoncia_despues2.jpg' %}" alt="" class="after" />
@@ -64,7 +64,7 @@
                         </figure>
                     </div>
                     <div class="wrapper indent-bot2">
-                        <figure class="img-style img-indent"><img src="{% static 'images/limpieza_despues.jpg' %}" alt="" class="after" />
+                        <figure class="img-style img-indent"><img src="{% static 'images/limpieza-despues.jpg' %}" alt="" class="after" />
                             <span class="afterBeforeText">Después</span>
                         </figure>
                         <figure class="img-style"><img src="{% static 'images/periodoncia_despues2.jpg' %}" alt="" class="after" />
@@ -81,13 +81,13 @@
 
 {% block footergallery %}
     <figure>
-        <a href="{% static 'images/equipo_trabajando.jpg' %}" rel="shadowbox[servicio]" title="Equipo trabajando">
-            <img src="{% static 'images/equipo_trabajando.min.jpg' %}" alt="Equipo trabajando" title="Equipo trabajando" />
+        <a href="{% static 'images/equipo-trabajando.jpg' %}" rel="shadowbox[servicio]" title="Equipo trabajando">
+            <img src="{% static 'images/equipo-trabajando.min.jpg' %}" alt="Equipo trabajando" title="Equipo trabajando" />
         </a>
     </figure>
     <figure>
-        <a href="{% static 'images/equipo_trabajando2.jpg' %}" rel="shadowbox[servicio]" title="Equipo trabajando">
-            <img src="{% static 'images/equipo_trabajando2.min.jpg' %}" alt="Equipo trabajando" title="Equipo trabajando" />
+        <a href="{% static 'images/equipo-trabajando2.jpg' %}" rel="shadowbox[servicio]" title="Equipo trabajando">
+            <img src="{% static 'images/equipo-trabajando2.min.jpg' %}" alt="Equipo trabajando" title="Equipo trabajando" />
         </a>
     </figure>
     <figure>
