--- a/v2/patrodent/templates/index.html
+++ b/v2/patrodent/templates/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block meta %}
-<meta property="og:title" content="Clínica Dental Patrodent" />
+<meta property="og:title" content="Clínica Dental Patrodent, C/ Marques de Paradas, Sevilla" />
 <meta property="og:url" content="http{% if request.is_secure %}{% endif %}://{{ request.get_host }}{% url 'template_view' 'index' %}">
 <meta property="og:description" content="Clínica Dental Patrocinio Gómez Martínez C/ Marques de Paradas nº 22 1 º dcha Sevilla (junto a plaza de armas)">
 <meta property="og:type" content="image/jpeg" />
@@ -26,13 +26,13 @@
                 <h2>Clínica Dental Patrodent</h2>
                 <h3 class="p2">Bienvenidos a tu clinica</h3>
                 <p class="text-1 text-left-index">
-                    La Clínica Dental Patrodent es una consulta de odontología integral, que le permitirá resolver todos los problemas de salud y estética buco-dental de una manera sencilla, cómoda y eficaz.
+                    La Clínica Dental PATRODENT es una consulta de Odontología Avanzada con más de 35 años de experiencia. Está situada en el centro de Sevilla y ofrece todos los servicios e innovaciones de la odontología actual.
                 </p>
                 <p class="text-1 text-left-index">
-                    Ofrece todo tipo de especialidades con un personal altamente cualificado: Odontología general, Estética dental y Blanqueamiento, Ortodoncia, Odontopediatría, Periodoncia, Endodoncia, Cirugía oral e Implantología, Prótesis dental y Rehabilitación implantoprotésica.
+                    Buscamos la excelencia en el trato y en el servicio, es por ello que ofrecemos una atención personalizada y exclusiva durante todo el tratamiento.
                 </p>
                 <p class="text-1 text-left-index">
-                    Ven y confía en nosotros
+                    Nuestras instalaciones cuentan con todas las comodidades para ofrecer un diagnóstico avanzado de todos nuestros casos.
                 </p>
             </div>
             <div class="grid_14 omega">
@@ -76,6 +76,16 @@
             <h4 class="p3">Renovandonos por ti...</h4>
             <blockquote><p>Nuestra vocación es ofrecer un excelente servicio y atención a nuestros pacientes para que queden totalmente satisfechos. Por ello, nos renovamos día a día intentando superarnos en nuestros logros; renovando la imágen de <a href="{% url 'template_view' "instalaciones" %}"> nuestra clínica</a> que le invitamos a conocer.</p>
             <p>Nuestro <a href="{% url 'template_view' "quienes-somos" %}">equipo humano</a> muy cualificado está a su disposición para ayudarle a resolver todas sus consultas en cualquier momento.”</p></blockquote>
+        </div>
+    </div>
+    <div class="wrapper">
+        <div class="alpha prefix_1 grid_10 suffix_1">
+            <h4 class="p3">Tu clínica de confianza desde 1982</h4>
+            <p class="p3">Creemos en la tradición del trato cercano y la excelencia clínica. </p>
+        </div>
+        <div class="alpha prefix_1 grid_10 suffix_1">
+            <h4 class="p3">Sólo materiales Premium</h4>
+            <p class="p3">Trabajamos con brackets e implantes de alta gama, así como con laboratorios de prótesis dental de primer nivel. </p>
         </div>
     </div>
 {% endblock %}
