--- a/v2/patrodent/templates/templates/base.html
+++ b/v2/patrodent/templates/templates/base.html
@@ -168,16 +168,11 @@
             <div class="container_24">
                 
                 <div class="grid_24">
-                    <h1>
+                    <h1 class="sign">
                         <a href="{% url 'template_view' 'index' %}">
-                            <img src="{% static 'images/logo_patrodent.png' %}" alt="Logo Clinica dental patrodent">
+                            Clinica Dental Patrodent
                         </a>
                     </h1>
-{#                    <h1 class="sign">#}
-{#                        <a href="{% url 'template_view' 'index' %}">#}
-{#                            Clinica Dental Patrodent#}
-{#                        </a>#}
-{#                    </h1>#}
                     <div class="fright">
                         <div class="slogon">
                             <div class="tel">Llamanos <span><a href="tel:954 21 14 22">954 21 14 22</a></span></div>
